CAY-1639 cayenne-lifecycle: don't call String representation of ObjectId a UUID
CAY-1640 NullPointerException when saving
CAY-1642 [PATCH] add ability to customize connection "timeout" setting for ROP
CAY-1643 Updated Velocity templates to use static keys in setters/getters
CAY-1649 Use BOOLEAN data type on Derby. Require Derby version >= 10.7.1.1.
CAY-1651 ObjectContext.localObject - defer FaultFailureExceptions on temporary IDs
CAY-1653 Improving DefaultEventManager concurrency - non-bocking DispatchQueue
CAY-1654 Can't switch DataSource Factory on certain projects
CAY-1656 cayenne generate extra data in xml model when change DataNode factory
CAY-1657 Expression: in-memory comparison requires persistent to be in the same context as exp parameters to match
CAY-1659 PATCH: Ingres limit query support
CAY-1660 Ingres primary key generator doesn't work correctly with Ingres 10
CAY-1662 @Auditable and @AuditableChild annotations should support 'ignoredProperties' parameter and exclude changes to runtime relationships
CAY-1663 @CacheGroups annotation should allow an empty list of cache groups
CAY-1666 Fix problem with tests on ingres db
CAY-1667 Expression parser performance optimization
CAY-1669 RuntimeProperties use of System properties becomes a contention point when creating query translators 
CAY-1670 Non-blocking DataRowStore
CAY-1675 [PATCH] add .first(List<T>) method to Expression to enhance in-memory filtering
CAY-1679 A notion of default node
CAY-1680 Get rid of shared locks in DataDomain metadata lookups

Bug Fixes Since 3.1M3:

CAY-1477 Modeler: Better validation for erroneous horizontal inheritance mapping
CAY-1513 Deadlock in PoolManager
CAY-1623 [PATCH] PersistentObjectList.setValue does not work
CAY-1624 [PATCH] PersistentObjectHolder throws NPE is object is transient - not in an ObjectContext
CAY-1627 CayenneModeler: collection types for to-many relationships are not saved