@@ -28,6 +28,7 @@ CAY-1640 NullPointerException when saving
 CAY-1642 [PATCH] add ability to customize connection "timeout" setting for ROP
 CAY-1643 Updated Velocity templates to use static keys in setters/getters
 CAY-1649 Use BOOLEAN data type on Derby. Require Derby version >= 10.7.1.1.
+CAY-1650 [PATCH] Verify existence of tables if a default schema is specified
 CAY-1651 ObjectContext.localObject - defer FaultFailureExceptions on temporary IDs
 CAY-1653 Improving DefaultEventManager concurrency - non-bocking DispatchQueue
 CAY-1654 Can't switch DataSource Factory on certain projects
